--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.0.0",
+    "@angular/cdk": "^7.2.1",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
@@ -20,18 +21,34 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
+    "angular-calendar": "^0.26.4",
+    "angularx-flatpickr": "^6.1.0",
+    "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "date-fns": "^1.30.1",
+    "flatpickr": "^4.5.2",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "ng-multiselect-dropdown": "^0.2.3",
+    "ng-pick-datetime": "^7.0.0",
+    "ng-sidebar": "^8.0.0",
+    "ng6-toastr-notifications": "^1.0.4",
+    "ngx-cookie-service": "^2.1.0",
+    "ngx-toastr": "^9.1.1",
+    "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
+    "socket.io-client": "^2.2.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-angular": "^0.11.4",
     "@angular/cli": "~7.0.6",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
